------------------------------------------------

Changes
* Renamed NDN-CPP to NDN-IND. Renamed include paths to <ndn-ind/...>. Renamed the
  libraries to libndn-ind.a, etc.
* Added ndn::util::Scheduler and time utilities in ndn::time .
* In Interest, changed the MustBeFresh default value to false.
* In Face, also check for a Unix socket at /var/tmp/nfd.sock .

NDN-CPP v0.17 (2019-10-04)
--------------------------

Changes
* https://redmine.named-data.net/issues/4807 Print a warning if the application
  didn't call Interest::setDefaultCanBePrefix() or set the Interest's CanBePrefix.
* https://redmine.named-data.net/issues/4869 Renamed ForwardingFlags to RegistrationOptions.
* https://redmine.named-data.net/issues/4869 In RegistrationOptions, added setOrigin()
  to use in the flags argument of registerPrefix.
* https://redmine.named-data.net/issues/4813 In Face, added putNack().

Deprecated
* Deprecated ForwardingFlags. Use RegistrationOptions.

Bug fixes
* https://redmine.named-data.net/issues/4926 In decoding Data, make MetaInfo
  and Content optional.
* https://redmine.named-data.net/issues/4947 ApplicationParameters TLV type code.
* https://redmine.named-data.net/issues/4968 In examples, updated ControlParameters protobuf.

NDN-CPP v0.16 (2019-03-06)
--------------------------

Changes
* https://redmine.named-data.net/issues/4655 Added name-based access control v2,
  EncryptorV2, DecryptorV2 and AccessControlV2, with integration tests.
* In TpmBackEndFile, implemented private key import/export.
* In KeyChain, implemented exportSafeBag with a password-encrypted private key.
* sync: Added FullPSync2017 and FullPSync2017WithUsers, implementing the Full PSync protocol.
* examples: Added test-full-psync and test-full-psync-with-users.

Bug fixes
* https://redmine.named-data.net/issues/4732 In decodeControlParameters, skip
  unrecognized TLVs.

Deprecated
* In Interest, deprecated getParameters, setParameters and hasParameters. Use